# j-secure-cloud

./: .env  .gitignore  Cargo.toml  PROGRESS.md  alice_secret.txt  cookies.txt  cookies_demo.txt  dashboard.html  downloaded_ok.txt  downloaded_out.txt  downloaded_test.txt  fichier_telecharge.txt  jar.txt  jojo.txt  jojo3_download.txt  jsecure.db  ok.txt  out.txt  package-lock.json  package.json  playwright.config.ts  rust.jdoukh.org  server_test.sh  server_test_release.sh  test2.txt  test_api.sh  test_api_full.sh  test_download.txt  test_upload.txt
.sqlx/: query-85d4e7e1f1c765e2f4e402621d80e0ac705a26b497bf3d2060584d19c9c47bc5.json
backup/: jsecure.db.20260103-182113.bak
data/: jsecure.db
e2e/: full.spec.ts  minimal.spec.ts
migrations/: 20251218224852_init.sql  20251231173346_create_audit_logs.sql  20260103194243_init_schema.sql  20260106222136_add_deleted_at_to_files.sql
src/: App.tsx  app.rs  config.rs  db.rs  main.rs  nain.rs
src/api/: admin.rs  audit.rs  auth.rs  error.rs  files.rs  health.rs  lib.rs  me.rs  mod.rs  rate_limit.rs
src/web/: mod.rs  pages.rs  routes.rs
static/: admin.html  dashboard.html
tests/: api.rs  api_delete.rs  api_download.rs  api_upload.rs
