[package]
name = "jsecure-cloud"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = { version = "0.7", features = ["macros", "json", "multipart", "tokio"] }
tokio = { version = "1", features = ["macros", "rt-multi-thread", "full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tower-http = { version = "0.5", features = ["trace", "cors"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
chrono = { version = "0.4", features = ["serde"] }
argon2 = "0.5"
rand_core = { version = "0.6", features = ["std"] }
jsonwebtoken = "9"
time = { version = "0.3", features = ["macros"] }
sqlx = { version = "0.7", features = ["runtime-tokio-rustls", "sqlite"] }
hyper = { version = "1", features = ["full"] }
tokio-util = { version = "0.7", features = ["io"] }
once_cell = "1"
tower = { version = "0.5", features = ["limit", "util"] }
clamav-client = "2.2.0"
dashmap = "5"
dotenvy = "0.15"
anyhow = "1"
nix = { version = "0.29", features = ["fs"] }

[dev-dependencies]
tower = "0.5"
http-body-util = "0.1"
mime = "0.3"

[lib]
name = "jsecure_cloud"
path = "src/lib.rs"
